"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Fix for [ 2022488 ] 2.x GTKv1 client built with --enable-cfgtk2 cannot login
and set [ 1862055 ] GTKv1 client built with --enable-cfgtk2 cannot login as
Pending.  It is no longer necessary to run the client with Popup Windows.
1862055 was reported against the Windows client, but I cannot build it to
test, though there is no reason it should not work there.
  gtk/keys.c
Kevin Bulgrien 2008-12-13

Fix bug #1871476:] client script 'watch stats' error.
 common/script.c: don't work on initial length, as it'll affect other scripts.
  Make parameters const to avoid issues.
 common/script.h: change function definition.
Nicolas Weeger 2008-05-09

Apply patch #1878451: Let crossfire client compile with OSS4's soundcard.h
Courtesy anonymous.
 sound-src/cfsndserv.c
 Nicolas Weeger 2008-05-07


Changes for 1.11.0:
------------------------------------------------------------------------------
configure.in: Trunk revision 6524 merge of mwedel's add another eval $ndatadir
  line so properly resolve all the shell variable names so that CF_DATADIR is
  set properly in common/config.h.
gtk/gx11.c: Merge Nicolas Weeger's fix memory leak from trunk revision 6771.
Bring in relevant changes from trunk revision 7108.
  Added to svn:ignore: config.log Makefile autom4te.cache
Bring in relevant changes from trunk revision 7104.
  macros/curses.m4, macros/gnome-print-check.m4, macros/linger.m4,
  macros/sdl.m4, macros/gtk.m4, macros/gnome-gettext.m4,
  macros/need-declaration.m4: m4 file updates were made to fix a configure
    script crash and to remove aclocal warnings.
  pixmaps/Makefile.in, Makefile.in, gtk/Makefile.in, common/Makefile.in,
  help/Makefile.in, utils/Makefile.in, x11/Makefile.in, gtk-v2/Makefile.in,
  gtk-v2/src/Makefile.in, sound-src/Makefile.in, aclocal.m4 : Result from
    new and updated m4 files.