@@ -2,6 +2,12 @@
 Top of SVN tree:
 ------------------------------------------------------------------------------
 
+gtk_signal_emit_stop_by_name() was poorly placed and is moved to a location
+where it will help fix the [ 1876788 ] Doubled characters in GTK clients
+(unusable) for the GTK-V1 client.
+  gtk/keys.c
+  Kevin Bulgrien 2008-12-13
+
 Fix for [ 2022488 ] 2.x GTKv1 client built with --enable-cfgtk2 cannot login
 and for [ 1862055 ] GTKv1 client built with --enable-cfgtk2 cannot login so
 it is no longer necessary to run the client with Popup Windows.
